second commit update and delete

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,8 @@
-.custom-button {
-    background-color: #add8e6; /* תכלת בהיר */
-    border: 2px solid white; /* מסגרת לבנה */
-    color: white; /* צבע טקסט לבן */
-    width: 100%; /* רוחב מלא */
-    height: 50px; /* גובה אחיד */
-    font-size: 16px; /* גודל טקסט אחיד */
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5); /* צל עדין */
-  }
-  
-  .custom-button:hover {
-    background-color: #87ceeb; /* גוון כהה יותר כאשר מרחפים מעל הכפתור */
-  }
+.background-image {
+  background-image: url('../assets/5.jpg'); /* כתובת התמונה */
+  background-size: cover; /* מתאים את גודל התמונה לגודל האלמנט */
+  background-repeat: no-repeat; /* מונע חזרה של התמונה */
+  background-position: center; /* ממוקם את התמונה במרכז האלמנט */
+  height: 100vh; /* גובה האלמנט יקבע גובה של 100% מהחלון */
+}
   
