--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,113 +1,5 @@
-<!-- <router-outlet></router-outlet>
-<button (click)="showOrNotDoctors()">Doctors List</button>
-<div *ngIf="showDoctorsList">
-    <app-doctors-list></app-doctors-list>
+<app-home-page></app-home-page>
+<div class="background-image">
+<router-outlet></router-outlet>
 </div>
-<button (click)="showOrNotPatients()">Patients List</button>
-<div *ngIf="showPatientsList">
-    <app-patients-list></app-patients-list>
-</div>
-<button (click)="showOrNotTurns()">Turns List</button>
-<div *ngIf="showTurnsList">
-    <app-turns-list></app-turns-list>
-</div> -->
-
-
-<!-- <div class="container mt-4">
-  <div class="row mb-3">
-    <div class="col">
-      <button class="btn btn-primary btn-block" (click)="showOrNotDoctors()">Doctors List</button>
-    </div>
-  </div>
-  <div class="row mb-3" *ngIf="showDoctorsList">
-    <div class="col">
-      <div class="card">
-        <div class="card-body">
-          <app-doctors-list></app-doctors-list>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row mb-3">
-    <div class="col">
-      <button class="btn btn-primary btn-block" (click)="showOrNotPatients()">Patients List</button>
-    </div>
-  </div>
-  <div class="row mb-3" *ngIf="showPatientsList">
-    <div class="col">
-      <div class="card">
-        <div class="card-body">
-          <app-patients-list></app-patients-list>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row mb-3">
-    <div class="col">
-      <button class="btn btn-primary btn-block" (click)="showOrNotTurns()">Turns List</button>
-    </div>
-  </div>
-  <div class="row mb-3" *ngIf="showTurnsList">
-    <div class="col">
-      <div class="card">
-        <div class="card-body">
-          <app-turns-list></app-turns-list>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
- -->
-
-
- <div class="container mt-4">
-   <div class="row mb-3">
-     <div class="col">
-       <button class="btn custom-button" (click)="showOrNotDoctors()">Doctors List</button>
-     </div>
-   </div>
-   <div class="row mb-3" *ngIf="showDoctorsList">
-     <div class="col">
-       <div class="card">
-         <div class="card-body">
-           <app-doctors-list></app-doctors-list>
-         </div>
-       </div>
-     </div>
-   </div>
- 
-   <div class="row mb-3">
-     <div class="col">
-       <button class="btn custom-button" (click)="showOrNotPatients()">Patients List</button>
-     </div>
-   </div>
-   <div class="row mb-3" *ngIf="showPatientsList">
-     <div class="col">
-       <div class="card">
-         <div class="card-body">
-           <app-patients-list></app-patients-list>
-         </div>
-       </div>
-     </div>
-   </div>
- 
-   <div class="row mb-3">
-     <div class="col">
-       <button class="btn custom-button" (click)="showOrNotTurns()">Turns List</button>
-     </div>
-   </div>
-   <div class="row mb-3" *ngIf="showTurnsList">
-     <div class="col">
-       <div class="card">
-         <div class="card-body">
-           <app-turns-list></app-turns-list>
-         </div>
-       </div>
-     </div>
-   </div>
- </div>
-
-  <!-- <router-outlet></router-outlet> -->
-  <!-- <button (click)="navigateToDoctorPage()">doctorPage</button> -->
+<!-- <mat-slide-toggle></mat-slide-toggle> -->
