--- a/src/app/components/turn/add-turn/add-turn.component.html
+++ b/src/app/components/turn/add-turn/add-turn.component.html
@@ -1,1 +1,38 @@
-<p>add-turn works!</p>
+<form [formGroup]="addTurn" class="turn-form">
+    <div class="form-group">
+        <label for="date">Date:</label>
+        <input type="date" id="date" formControlName="date" class="form-control">
+        <div *NgIf="addTurn.get('date').invalid && addTurn.get('date').dirty" class="error-message">
+          <p>This field is required.</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="hour">Hour:</label>
+        <input type="number" id="hour" formControlName="hour" class="form-control">
+        <div *NgIf="addTurn.get('hour').invalid && addTurn.get('hour').dirty" class="error-message">
+          <p>This field is required.</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="treatmentDuration">Treatment Duration:</label>
+        <input type="number" id="treatmentDuration" formControlName="treatmentDuration" class="form-control">
+        <div *NgIf="addTurn.get('treatmentDuration').invalid && addTurn.get('treatmentDuration').dirty" class="error-message">
+          <p>This field is required.</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="patientId">Patient ID:</label>
+        <input type="number" id="patientId" formControlName="patientId" class="form-control">
+        <div *NgIf="addTurn.get('patientId').invalid && addTurn.get('patientId').dirty" class="error-message">
+          <p>This field is required.</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="doctorId">Doctor ID:</label>
+        <input type="number" id="doctorId" formControlName="doctorId" class="form-control">
+        <div *NgIf="addTurn.get('doctorId').invalid && addTurn.get('doctorId').dirty" class="error-message">
+          <p>This field is required.</p>
+        </div>
+    </div>
+    <button (click)="save()" [disabled]="addTurn.invalid" class="btn btn-primary">Save New Turn</button>
+</form>
