--- a/src/app/components/doctor/update-doctor/update-doctor.component.html
+++ b/src/app/components/doctor/update-doctor/update-doctor.component.html
@@ -1,56 +1,5 @@
-<!-- <form #doctorForm="ngForm">
-    <div class="input">
-        
-        <input name="tz" #tzId="ngModel" type="number" [(ngModel)]="doctor.tz" required="true" minlength="9" maxlength="9" />
-        @if(tzId.errors){
-        @if(tzId.errors['required']){
-        <div>you must write the tz</div>
-        }
-        @else {
-        <div></div>
-        }
-        }
-    </div>
-    <div class="input">
-        <input name="firstName" #firstNameId="ngModel" type="text" [(ngModel)]="doctor.firstName" required="true" minlength="3" />
-        @if(firstNameId.errors){
-        @if(firstNameId.errors['required']){
-        <div>you must write the doctor name</div>
-        }
-        @else {
-        <div></div>
-        }
-        }
-    </div>
-    <div class="input">
-        <input name="lastName" #lastNameId="ngModel" type="text" [(ngModel)]="doctor.lastName" required="true" minlength="3" />
-        @if(firstNameId.errors){
-        @if(firstNameId.errors['required']){
-        <div>you must write the doctor name</div>
-        }
-        @else {
-        <div>0</div>
-        }
-        }
-    </div>
-
-    <div class="input">
-        <input #domainId="ngModel" name="domain" type="text" [(ngModel)]="doctor.domain" required="true" minlength="10" />
-        @if(domainId.errors){
-        @if(domainId.errors['required']){
-        <div>you must write the domain</div>
-        }
-        @else {
-        <div>you must write at least 10 chars</div>
-        }
-        }
-    </div>
-   
-</form>
-<button [disabled]="!doctorForm.valid" (click)="save()">save</button> -->
-
-
-<form [formGroup]="doctorForm" (ngSubmit)="save()">
+<div *ngIf="formVisible">
+  <form [formGroup]="doctorForm" (ngSubmit)="save()">
     <div class="input">
       <input formControlName="tz" type="number" placeholder="TZ" />
       <div *ngIf="doctorForm.get('tz')?.invalid && doctorForm.get('tz')?.touched">
@@ -81,4 +30,4 @@
     </div>
     <button type="submit" [disabled]="doctorForm.invalid">Save</button>
   </form>
-  
+</div>
