the fifth commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="background-image">
 <router-outlet></router-outlet>
 </div>
-<app-add-doctor></app-add-doctor>
+<!-- <app-add-doctor></app-add-doctor>
 <app-add-patient></app-add-patient>
-<app-add-turn></app-add-turn>
+<app-add-turn></app-add-turn> -->
 <!-- <mat-slide-toggle></mat-slide-toggle> -->
