--- a/src/app/components/doctor/update-doctor/update-doctor.component.css
+++ b/src/app/components/doctor/update-doctor/update-doctor.component.css
@@ -1,30 +1,46 @@
 form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    margin-top: 10px;
-  }
-  
-  input {
-    margin-bottom: 10px;
-    padding: 8px;
-    font-size: 14px;
-  }
-  
-  button {
-    margin-top: 20px;
-    padding: 10px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  max-width: 200px; /* Adjust the form width as needed */
+  margin: auto;
+}
+
+label {
+  margin-top: 5px; /* Reduce top margin for labels */
+}
+
+input {
+  margin-bottom: 5px; /* Reduce bottom margin for input fields */
+  padding: 8px;
+  font-size: 14px;
+  width: 100%; /* Make input fields full width */
+  box-sizing: border-box; /* Ensure padding is included in width */
+}
+
+button[type="submit"] {
+  margin-top: 10px; /* Reduce top margin for the submit button */
+  padding: 10px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%; /* Make button full width */
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.icon-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.icon-button mat-icon {
+  font-size: 24px;
+  color: black; /* Adjust the color as needed */
+}
