--- a/src/app/components/doctor/update-doctor/update-doctor.component.html
+++ b/src/app/components/doctor/update-doctor/update-doctor.component.html
@@ -1,31 +1,39 @@
+<button mat-icon-button (click)="toggleForm()" class="icon-button">
+  <mat-icon>edit</mat-icon>
+</button>
+
 <div *ngIf="formVisible">
   <form [formGroup]="doctorForm" (ngSubmit)="save()">
     <div class="input">
-      <input formControlName="tz" type="number" placeholder="TZ" />
+      <label for="tz">TZ:</label>
+      <input id="tz" formControlName="tz" type="number" placeholder="TZ" />
       <div *ngIf="doctorForm.get('tz')?.invalid && doctorForm.get('tz')?.touched">
-        <div *ngIf="doctorForm.get('tz')?.errors?.['required']">you must write the tz</div>
+        <div *ngIf="doctorForm.get('tz')?.errors?.['required']">You must write the tz</div>
         <div *ngIf="doctorForm.get('tz')?.errors?.['minlength'] || doctorForm.get('tz')?.errors?.['maxlength']">
           TZ must be 9 digits long
         </div>
       </div>
     </div>
     <div class="input">
-      <input formControlName="firstName" type="text" placeholder="First Name" />
+      <label for="firstName">First Name:</label>
+      <input id="firstName" formControlName="firstName" type="text" placeholder="First Name" />
       <div *ngIf="doctorForm.get('firstName')?.invalid && doctorForm.get('firstName')?.touched">
-        <div *ngIf="doctorForm.get('firstName')?.errors?.['required']">you must write the doctor name</div>
+        <div *ngIf="doctorForm.get('firstName')?.errors?.['required']">You must write the doctor name</div>
       </div>
     </div>
     <div class="input">
-      <input formControlName="lastName" type="text" placeholder="Last Name" />
+      <label for="lastName">Last Name:</label>
+      <input id="lastName" formControlName="lastName" type="text" placeholder="Last Name" />
       <div *ngIf="doctorForm.get('lastName')?.invalid && doctorForm.get('lastName')?.touched">
-        <div *ngIf="doctorForm.get('lastName')?.errors?.['required']">you must write the doctor name</div>
+        <div *ngIf="doctorForm.get('lastName')?.errors?.['required']">You must write the doctor name</div>
       </div>
     </div>
     <div class="input">
-      <input formControlName="domain" type="text" placeholder="Domain" />
+      <label for="domain">Domain:</label>
+      <input id="domain" formControlName="domain" type="text" placeholder="Domain" />
       <div *ngIf="doctorForm.get('domain')?.invalid && doctorForm.get('domain')?.touched">
-        <div *ngIf="doctorForm.get('domain')?.errors?.['required']">you must write the domain</div>
-        <div *ngIf="doctorForm.get('domain')?.errors?.['minlength']">you must write at least 10 chars</div>
+        <div *ngIf="doctorForm.get('domain')?.errors?.['required']">You must write the domain</div>
+        <div *ngIf="doctorForm.get('domain')?.errors?.['minlength']">You must write at least 10 chars</div>
       </div>
     </div>
     <button type="submit" [disabled]="doctorForm.invalid">Save</button>
