--- a/src/app/components/doctors-list/doctors-list.component.css
+++ b/src/app/components/doctors-list/doctors-list.component.css
@@ -1,33 +1,40 @@
-.styled-table.alt-table {
-  width: 70%;
-  margin: 0 auto; /* יישום מרכז האופקי */
+.doctor-list {
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+/* עיצוב כללי של הטבלה */
+table {
+  width: 100%;
   border-collapse: collapse;
-  border-spacing: 0;
-  border: 1px solid #d4cbcb;
+  margin-top: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.styled-table.alt-table th, .styled-table.alt-table td {
-  padding: 18px 80px;
-  text-align: center;
-  border: 3px solid #ddd;
+th, td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: center; /* יישור מרכזי של התוכן */
 }
 
-.styled-table.alt-table th {
-  background-color: #f2f2f2;
-  color: #333;
+/* עיצוב כותרות העמודות */
+th {
+  background-color: #4CAF50 ;
+  color: black;
+  font-weight: bold;
+  text-align: center; /* יישור מרכזי של כותרות העמודות */
 }
 
-.styled-table.alt-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
+/* הדגשת שורות */
+tr:nth-child(even) {
+  background-color: #f2f2f2 ;
 }
 
-.styled-table.alt-table tbody tr:hover {
+tr:hover {
   background-color: #ddd;
 }
 
-.doctor-list {
-  width: 70%; /* גודל רחב מקסימלי */
-  margin: 0 auto; /* יישום מרכז האופקי */
-  max-height: 500px; /* גובה מקסימלי לטבלה */
-  overflow-y: auto; /* הוספת גלגלת אנכית כאשר התוכן גורם להיות גדול מהגובה המקסימלי */
+/* עיצוב כפתורים */
+button.mat-icon-button {
+  margin: 0 4px;
 }
