--- a/src/app/components/patients-list/patients-list.component.html
+++ b/src/app/components/patients-list/patients-list.component.html
@@ -1,4 +1,4 @@
-<div class="patient-list">
+<!-- <div class="patient-list">
   <h2>PatientsList</h2>
   <table class="styled-table alt-table">
     <thead>
@@ -20,5 +20,52 @@
         </td>
       </tr>
     </tbody>
+  </table>
+</div> -->
+<div class="patient-list">
+  <!-- כפתור להוספת פציינט חדש -->
+  <button mat-raised-button color="primary" (click)="this.add=!this.add">
+      <mat-icon>add</mat-icon> Add Patient
+  </button>
+  @if(add){
+    <app-add-patient></app-add-patient>
+  }
+
+  <!-- טבלה עם רשימת הפציינטים -->
+  <table mat-table [dataSource]="patientsList" class="mat-elevation-z8">
+      <!-- עמודת תז -->
+      <ng-container matColumnDef="tz">
+          <th mat-header-cell *matHeaderCellDef>TZ</th>
+          <td mat-cell *matCellDef="let patient">{{ patient.tz }}</td>
+      </ng-container>
+
+      <!-- עמודת שם פרטי -->
+      <ng-container matColumnDef="firstName">
+          <th mat-header-cell *matHeaderCellDef>First Name</th>
+          <td mat-cell *matCellDef="let patient">{{ patient.firstName }}</td>
+      </ng-container>
+
+      <!-- עמודת שם משפחה -->
+      <ng-container matColumnDef="lastName">
+          <th mat-header-cell *matHeaderCellDef>Last Name</th>
+          <td mat-cell *matCellDef="let patient">{{ patient.lastName }}</td>
+      </ng-container>
+
+      <!-- עמודת פעולות -->
+      <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let patient">
+              <button mat-icon-button color="accent" (click)="isClicked = !isClicked">
+                  <mat-icon>edit</mat-icon>
+              </button>
+              <app-update-patient *ngIf="isClicked" [id]="patient.id"></app-update-patient>
+              <button mat-icon-button color="warn" (click)="delete(patient)">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </div>
