--- a/src/app/components/patient/add-patient/add-patient.component.css
+++ b/src/app/components/patient/add-patient/add-patient.component.css
@@ -1,5 +1,36 @@
-/* .styled-table.alt-table {  width: 70%;  border-collapse: collapse;  border-spacing: 0;  border: 1px solid #d4cbcb ;}
-.styled-table.alt-table th, .styled-table.alt-table td {  padding: 18px 80px;  text-align: center;  border: 3px solid #ddd;}
-.styled-table.alt-table th {  background-color: #f2f2f2  ">;  color: #333;}.styled-table.alt-table tbody tr:nth-child(even) {  background-color: #f2f2f2  "}
-.styled-table.alt-table tbody tr:hover {  background-color: #ddd;}.doctor-list{  float: right;}
-.doctor-list {  width: 50%;  max-height: 500px;   overflow-y: auto; /} */
+mat-card {
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-color: #fafafa ;
+  }
+  
+  mat-card-header {
+    text-align: center;
+  }
+  
+  mat-card-title {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  mat-card-subtitle {
+    font-size: 16px;
+    color: #888;
+  }
+  
+  mat-form-field {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  mat-card-actions {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  button[mat-button] {
+    margin-left: 10px;
+  }
