--- a/src/app/components/patient/add-patient/add-patient.component.html
+++ b/src/app/components/patient/add-patient/add-patient.component.html
@@ -1,31 +1,22 @@
-<form [formGroup]="addPatient" class="patient-form">
-    <div class="form-group">
-        <label for="tz">tz:</label>
-        <input type="number" id="tz" formControlName="tz" class="form-control">
-        <div *NgIf="addPatient.get('tz').invalid && addPatient.get('tz').dirty" class="error-message">
-          <p>This field must be a maximum of 5 characters.</p>
-        </div>
-    </div>
-    <div class="form-group">
-      <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" formControlName="firstName" class="form-control">
-      <div *NgIf="addPatient.get('firstName').invalid && addPatient.get('firstName').dirty" class="error-message">
-        <p>This field must be a maximum of 5 characters.</p>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" formControlName="lastName" class="form-control">
-      <div *NgIf="addPatient.get('lastName').invalid && addPatient.get('lastName').dirty" class="error-message">
-        <p>This field is required.</p>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="age">Age:</label>
-      <input type="number" id="age" formControlName="age" class="form-control">
-      <div *NgIf="addPatient.get('age').invalid && addPatient.get('age').dirty" class="error-message">
-        <p>This field is required.</p>
-      </div>
-    </div>
-    <button (click)="save()" [disabled]="addPatient.invalid" class="btn btn-primary">Save New Patient</button>
+<mat-dialog-content>
+  <form [formGroup]="patientForm">
+    <mat-form-field appearance="fill">
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="firstName">
+    </mat-form-field><br>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Last Name</mat-label>
+      <input matInput formControlName="lastName">
+    </mat-form-field><br>
+
+    <mat-form-field appearance="fill">
+      <mat-label>age</mat-label>
+      <input matInput formControlName="age">
+    </mat-form-field>
   </form>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button (click)="onNoClick()" color="warn">No Thanks</button>
+  <button mat-button (click)="save()" [mat-dialog-close]="patientForm.value" cdkFocusInitial color="primary">Ok</button>
+</mat-dialog-actions>
