--- a/src/app/components/patients-list/patients-list.component.html
+++ b/src/app/components/patients-list/patients-list.component.html
@@ -1,35 +1,13 @@
-<!-- <div class="patient-list">
-  <h2>PatientsList</h2>
-  <table class="styled-table alt-table">
-    <thead>
-      <tr>
-        <th>tz</th>
-        <th>firstName</th>
-        <th>lastName</th>
-        <th>actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let patient of patientsList">
-        <td>{{ patient.tz }}</td>
-        <td>{{ patient.firstName }}</td>
-        <td>{{ patient.lastName }}</td>
-        <td>
-          <button (click)="delete(patient)">delete</button>
-          <button (click)="update(patient)">update</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
 <div class="patient-list">
-  <!-- כפתור להוספת פציינט חדש -->
-  <button mat-raised-button color="primary" (click)="this.add=!this.add">
+
+  <!-- <button mat-raised-button color="primary" (click)="this.add=!this.add">
       <mat-icon>add</mat-icon> Add Patient
   </button>
   @if(add){
     <app-add-patient></app-add-patient>
-  }
+  } -->
+ <app-add-dialog-patient></app-add-dialog-patient>
+
 
   <!-- טבלה עם רשימת הפציינטים -->
   <table mat-table [dataSource]="patientsList" class="mat-elevation-z8">
@@ -55,10 +33,10 @@
       <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
           <td mat-cell *matCellDef="let patient">
-              <button mat-icon-button color="accent" (click)="isClicked = !isClicked">
+              <!-- <button mat-icon-button color="accent" (click)="isClicked = !isClicked">
                   <mat-icon>edit</mat-icon>
-              </button>
-              <app-update-patient *ngIf="isClicked" [id]="patient.id"></app-update-patient>
+              </button> -->
+              <app-update-patient [id]="patient.id"></app-update-patient>
               <button mat-icon-button color="warn" (click)="delete(patient)">
                   <mat-icon>delete</mat-icon>
               </button>
