--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,15 +5,64 @@
   background-position: center; /* ממוקם את התמונה במרכז האלמנט */
   height: 100vh; /* גובה האלמנט יקבע גובה של 100% מהחלון */
 }
-.mat-form-field {
+/* עיצוב האייקון */
+.circle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px; /* גודל העיגול */
+  height: 100px; /* גודל העיגול */
+  border-radius: 50%; /* להפוך לעיגול */
+  background-color:#87ceeb; /* צבע רקע */
+  color: white; /* צבע האייקון */
+  font-size: 48px; /* גודל האייקון */
+  cursor: pointer; /* לשנות את סמן העכבר */
+  transition: background-color 0.3s; /* אנימציה לשינוי צבע */
+}
+
+.circle-icon:hover {
+  background-color:  #87ceeb; /* צבע רקע כאשר האייקון מרחף */
+}
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  display: grid;
+  place-items: center; /* מרכז גם אופקית וגם אנכית */
+  height: 50vh; /* גובה מלא של הדף */
+  position: relative;
+}
+.main-content {
+  width: 100%;
+  height: 100%;
+  display: block;
+  overflow-y: auto;
+}
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* להוסיף צל רך */
+   background-color: rgba(255, 255, 255, 0.8);  
+}
+
+app-log-in {
+  max-width: 400px;
   width: 100%;
 }
 
-mat-dialog-actions {
-  display: flex;
-  justify-content: flex-end;
+:host ::ng-deep app-home-page button {
+  background-color: #87ceeb; /* צבע רקע */
+  color: white; /* צבע טקסט */
+  border: none; /* להוריד את המסגרת */
+  border-radius: 5px; /* להפוך לעיגולי */
+  padding: 5px 10px; /* ריפוד פנימי */
+  margin: 0.1px; 
 }
 
-button {
-  margin: 0 8px;
-}
+
+
