--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -1,19 +1,20 @@
-<form [formGroup]="formLogin">
-    <div>
-      <label for="password">password:</label>
-      <input type="password" id="password" formControlName="password" >
-      <div *ngIf="formLogin.get('password')?.invalid && formLogin.get('password')?.dirty" >
-        <p>This field is required.</p>
-      </div>
+<form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="login-form">
+  <div class="form-group">
+    <label for="username">Username:</label>
+    <input type="text" id="username" formControlName="username" class="form-control">
+    <div *ngIf="formLogin.get('username')?.invalid && formLogin.get('username')?.dirty">
+      <p>This field must be a maximum of 5 characters.</p>
     </div>
-    <div>
-      <label for="username">user :</label>
-      <input type="text" id="username" formControlName="username" >
-      <div *ngIf="formLogin.get('username')?.invalid && formLogin.get('username')?.dirty">
-        <p>This field must be a maximum of 5 characters.</p>
-      </div>
-    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="password">Password:</label>
+    <input type="password" id="password" formControlName="password" class="form-control">
     
-    <!-- [disabled]="formLogin.invalid"  -->
-    <button type="submit" (click)="onSubmit()" >התחבר</button>
-  </form >
+    <div *ngIf="formLogin.get('password')?.invalid && formLogin.get('password')?.dirty" >
+      <p>This field is required.</p>
+    </div>
+  </div>
+
+  <button type="submit" [disabled]="formLogin.invalid" class="submit-button">Login</button>
+</form>
